<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_storebookmark"
        android:icon="@android:drawable/star_off"
        android:title="@string/storeBookmark" />

    <item
        android:id="@+id/nav_bookmarks"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/bookmarks" />

    <item
        android:id="@+id/nav_achievements"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/achievements" />

    <item
        android:id="@+id/nav_main"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/mainmenu" />

    <item
        android:id="@+id/nav_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help" />

</menu>
