<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <VideoView android:id="@+id/menuVideo"
        android:layout_width="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_height="fill_parent"/>

    <ImageView android:id="@+id/menuImage"
        android:layout_width="fill_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_height="fill_parent" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainMenuNew"
            android:id="@+id/buttonNew"
            android:background="#70000000"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonContinue"
            android:text="@string/mainMenuContinue"
            android:background="#70000000"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonHelp"
            android:text="@string/mainMenuHelp"
            android:background="#70000000"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCredits"
            android:text="@string/mainMenuCredits"
            android:background="#70000000"
            android:layout_marginBottom="10dp"
            android:textColor="#ffffff"/>
    </LinearLayout>

</RelativeLayout>